<resources>
    <string name="app_name">Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="image_preview">Image preview</string>
    <string name="add_url">Add Url</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">Add</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="remove_image">Remove Image</string>
    <string name="notes">Notes</string>
    <string name="remove_url">Remove Url</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="note_title">Note Title</string>
    <string name="format">Format</string>
    <string name="sort_notes">Sort Notes</string>
    <string name="sort_by_name_a_z">Sort by Name (A-Z)</string>
    <string name="sort_by_name_z_a">Sort by Name (Z-A)</string>
    <string name="sort_by_date_newest_first">Sort by Date (Newest First)</string>
    <string name="sort_by_date_oldest_first">Sort by Date (Oldest First)</string>
    <string name="trash_is_empty">Trash is empty</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="trash_bin">Trash Bin</string>
    <string name="restore_note">Restore Note</string>
    <string name="delete_permanently">Delete Permanently</string>
    <string name="confirm_empty_trash">Confirm Empty Trash</string>
    <string name="confirm_permanent_delete">Confirm Permanent Delete</string>
    <string name="note_restored">Note Restored</string>
    <string name="note_permanently_deleted">Note Permanently Deleted</string>
    <string name="save_drawing">Save Drawing</string>
    <string name="draw_in_white">Draw in white area</string>
    <string name="delete_all">Delete All</string>
    <string name="undo">Undo</string>
    <string name="draw">Draw Note</string>
    <string name="add_draw">Add Draw</string>
    <string name="drawing_preview">Draw Preview</string>
    <string name="remove_drawing">Remove Drawing</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="confirm_discard_changes">Confirm Discard Changes</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="note_title_cannot_be_empty">Note title cannot be empty</string>
    <string name="select_text_to_format">Select Text To Format</string>
    <string name="enter_valid_url">Enter Valid Url</string>
    <string name="clear_drawing_title">Clear Drawing</string>
    <string name="confirm_clear_drawing">Confirm Clear Drawing</string>
    <string name="nothing_to_save">Nothing To Save</string>
    <string name="error_creating_drawing_bitmap">Error Creating Drawing Bitmap</string>
    <string name="drawing_saved">Drawing Saved</string>
    <string name="unsaved_drawing_title">Unsaved Drawing</string>
    <string name="confirm_save_drawing">Confirm Save Drawing</string>
    <string name="save">Save</string>
    <string name="discard_drawing">Discard Drawing</string>
    <string name="cancel">Cancel</string>
    <string name="error_saving_drawing">Error Saving Drawing</string>
    <string name="permission_needed_to_save_drawing">Permission Needed To Save Drawing</string>
    <string name="app_drawing_folder_name">AppDrawings</string>
    <string name="app_drawing_folder_name_cache">AppDrawingsCache</string>
    <string name="error_creating_mediastore_entry">Error Creating Mediastore Entry</string>
    <string name="error_opening_outputstream">Error Opening Outputstream</string>
    <string name="drawing_saved_successfully">Drawing Saved Successfully</string>
    <string name="error_creating_cache_directory">Error Creating Cache Directory</string>
    <string name="error_creating_directory">Error Creating Directory</string>
    <string name="no_notes_found">No Notes Found</string>

    <string name="add_new_note_description">Add new note</string>
    <string name="sort_notes_description">Sort notes</string>
    <string name="go_to_trash_description">Open trash bin</string>
    <string name="add_image_description">Add image to note</string>
    <string name="add_url_description">Add URL to note</string>
    <string name="add_drawing_description">Add drawing to note</string>
    <string name="note_title_cant_be_empty">Note Title Cant Be Empty</string>
    <string name="are_you_sure_empty_trash_message">
        Are you sure you want to permanently delete all notes in the trash?</string>
    <string name="are_you_sure_want_to_delete_this_note_permanently">
        Are you sure you want to permanently delete this note? This action cannot be undone.</string> <string name="trash_bin_emptied">Trash bin emptied successfully.</string>
    <string name="confirm_permanent_delete_message_with_title">
        Are you sure you want to permanently delete the note \"%1$s\"?</string>
    <string name="dialog_message_confirm_permanent_delete">
        Are you sure you want to permanently delete this note? This action cannot be undone.</string>
    <string name="permission_denied_permanently">Permision Denied Permanently</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="failed_to_load_image">"Failed to load image: "</string>
    <string name="error_decoding_image_stream">"Error decoding image stream: "</string>
    <string name="drawing_file_not_found">Drawing file not found</string>
    <string name="drawing_file_does_not_exist">"Drawing file does not exist: "</string>
    <string name="image_file_not_found">"Image file not found: "</string>
    <string name="error_splitting_span">"Error splitting span: "</string>
    <string name="add_image_clicked">Add Image clicked</string>
    <string name="layoutaddimage_is_null_check_layout_miscellaneous_xml">layoutAddImage is null. Check layout_miscellaneous.xml</string>
    <string name="add_url_clicked">Add URL clicked</string>
    <string name="this_permission_is_needed_to_select_images_from_your_device">This permission is needed to select images from your device.</string>
    <string name="failed_to_parse_color">"Failed to parse color: "</string>
    <string name="error_copying_image_to_cache">"Error copying image to cache: "</string>
    <string name="save_button_clicked">Save button clicked.</string>
    <string name="drawing_found_proceeding_to_savedrawingandfinish">Drawing found, proceeding to saveDrawingAndFinish.</string>
    <string name="no_drawing_to_save">No drawing to save.</string>
    <string name="requesting_write_external_storage_permission_for_pre_q_device">Requesting WRITE_EXTERNAL_STORAGE permission for pre-Q device.</string>
    <string name="proceeding_with_actuallysavedrawing">Proceeding with actuallySaveDrawing.</string>
    <string name="drawing_saved_to_mediastore">"Drawing saved to MediaStore: "</string>
    <string name="failed_to_create_internal_directory">"Failed to create internal directory: "</string>
    <string name="drawing_copied_to_internal_path">"Drawing copied to internal path: "</string>
    <string name="cannot_create_public_directory_falling_back_to_internal">"Cannot create public directory, falling back to internal: "</string>
    <string name="drawing_saved_to_pre_q">"Drawing saved to (Pre-Q): "</string>
    <string name="saving_failed_path_not_set">Saving failed, path not set.</string>
    <string name="error_deleting_mediastore_entry_on_failure">"Error deleting MediaStore entry on failure: "</string>
    <string name="unexpected_error_saving_drawing">"Unexpected error saving drawing: "</string>
    <string name="ok">Ok</string>

    <string name="pin_note">Pin Note</string>
    <string name="unpin_note">Unpin Note</string>
    <string name="note_pinned">Note pinned</string>
    <string name="note_unpinned">Note unpinned</string>
    <string name="action_pin_note_description">Pin or unpin this note</string>
    <string name="pinned_indicator_description">Pinned note indicator</string>

</resources>